...
                                }
                            }
                    }
                }
                .listStyle(.plain)
            }
            .navigationTitle("Food History")
            .onChange(of: selectedDate) { _ in
                viewModel.fetchFoodRecords(for: selectedDate)
            }
            .onAppear {
                viewModel.fetchFoodRecords(for: selectedDate)
            }
...
